# youth_event_registration_app

./: .gitignore  .pre-commit-config.yaml  CHECKLIST_IMPLEMENTACAO.md  CONCEITO_MULTIPLOS_EVENTOS.md  DEBUG_VALIDATION.md  DOCUMENTACAO_COMPLETA.md  Dockerfile  EVENTOS_API_DOCS.md  EXEMPLOS_PRATICOS.md  IMPLEMENTACAO_EVENTOS.md  PROBLEMA_E_SOLUCAO.md  QUICK_REFERENCE.md  README.md  RESUMO_EXECUTIVO.md  RESUMO_MUDANCAS.md  TESTE_RAPIDO.md  VALIDATION_CHECKLIST.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: basic_scheduler.yml  ci.yml  health_check.yml  main.yml  ping_to_hub.yml  scheduled_healthcheck.yml  scheduler.yml  sync_to_hub.yml
.github/workflows/bkp/: scheduled_healthcheck.yml
src/backend/: Dockerfile
src/backend/app/: main.py
src/backend/app/crud/: create_crud.py
src/backend/app/db_connection/postgresql/: .env.dev_youth_event_registration_app  .env.prd_youth_event_registration_app
src/backend/app/engine_database/: database.py
src/backend/app/routes/: routes_events.py
src/backend/app/schemas/: SchemaEventParticipants.py  SchemaEvents.py  SchemaRegisteredEvents.py
src/backend/app/sql/: create_events_table.sql  create_registered_events_table.sql  create_tables.sql
src/backend/app/utils/: ConnectionDatabaseSql.py  SqlReadFile.py
src/backend/app/validator/: EventValidatorSchema.py  ParticipantValidatorSchema.py  ProductValidatorSchema.py  RegisteredEventValidatorSchema.py  StockMovementsValidatorSchema.py
src/frontend/app/: app.py  app_localhost.py
src/frontend/app/utils/: NormalizeText.py
(+18 files in other folders)
